# ChangeLog for dev-vcs/git-cola
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git-cola/ChangeLog,v 1.20 2014/01/29 11:55:12 jlec Exp $

*git-cola-1.9.3-r1 (29 Jan 2014)

  29 Jan 2014; Justin Lecher <jlec@gentoo.org> +git-cola-1.9.3-r1.ebuild:
  Fix broken documentation paths, #499658

  19 Jan 2014; Justin Lecher <jlec@gentoo.org> git-cola-1.9.1.ebuild,
  git-cola-1.9.3.ebuild:
  Block test if domain name is unset, #497876

*git-cola-1.9.3 (15 Jan 2014)

  15 Jan 2014; Justin Lecher <jlec@gentoo.org> +git-cola-1.9.3.ebuild,
  +files/git-cola-1.9.3-disable-tests.patch:
  Version Bump

*git-cola-1.9.1 (07 Nov 2013)

  07 Nov 2013; Justin Lecher <jlec@gentoo.org> +git-cola-1.9.1.ebuild,
  +files/1.9.1-disable-tests.patch,
  +files/git-cola-1.9.1-system-ssh-askpass.patch:
  Version BUmp

  12 Oct 2013; Patrick Lauer <patrick@gentoo.org> git-cola-1.8.5.ebuild:
  Whitespace

*git-cola-1.8.5 (11 Oct 2013)

  11 Oct 2013; Justin Lecher <jlec@gentoo.org> +git-cola-1.8.5.ebuild:
  Version BUmp

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> git-cola-1.8.2.ebuild:
  Stable for x86, wrt bug #472286

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> git-cola-1.8.2.ebuild:
  Stable for amd64, wrt bug #472286

*git-cola-1.8.3 (22 Jun 2013)

  22 Jun 2013; Justin Lecher <jlec@gentoo.org> +git-cola-1.8.3.ebuild:
  Version Bump, #474114

  04 Jun 2013; Justin Lecher <jlec@gentoo.org> -git-cola-1.4.3.4.ebuild,
  -git-cola-1.4.3.5.ebuild, -git-cola-1.7.7.ebuild, -git-cola-1.7.7-r1.ebuild,
  -git-cola-1.8.0.ebuild, -git-cola-1.8.1.ebuild,
  -files/1.7.7-system-ssh-askpass.patch:
  Drop old

  04 Jun 2013; Justin Lecher <jlec@gentoo.org> git-cola-1.8.2.ebuild:
  Fix installation of html docs, #472048

  29 Apr 2013; Justin Lecher <jlec@gentoo.org> git-cola-1.8.2.ebuild:
  Always depend on app-text/asciidoc for manpage generation

  29 Apr 2013; Justin Lecher <jlec@gentoo.org> git-cola-1.8.2.ebuild: