@@ -12,28 +12,30 @@ DIST git-cola-1.8.3.tar.gz 404234 SHA256 21b0aaec3d6b1e0edbe3a6bd3f085078ffe15fe
 DIST git-cola-1.8.5.tar.gz 416920 SHA256 fcefb0e82b8c59b5d063f55edc58d2a1210c4ebab76bef71f01caf91d30b2005 SHA512 5a5042dd00fbf9d342429823e5f89ff413a60dabfb5f2d46cfd203f65b2ec4e8d7cbba8c5f940a3e83b5474a1b050bdbbe3f75ad682535536cb65480b729fbd2 WHIRLPOOL 20530e7f6564a1d6a6c138a0684fd544fa74aa12d5cc87316850b18f602543bd34032a6c8d3333a61a647583c6dcfc5cb44de296bfba32ada0c58314e22f5482
 DIST git-cola-1.9.1.tar.gz 426723 SHA256 6745e9a4890da734a102ea0c06cdd73ab15bce48f357ade9e7cb8c9f78f87371 SHA512 9baad8ea1f8ecafd66d95873c02e408fcfc13237f3d1f104888866cc7c089b96f180c682e4bf98841b1ef6fbc1936809d7bb8ab7edf9464a6d6e37c56a881b75 WHIRLPOOL b8d490ce64784d71413a588b99b2d4b552e9cd5ce3e3c98af25782b57e6920cd44861f75f4fbb47ad75d8f0aa74a04de2b5909a3a01e7c7627c794a29f698086
 DIST git-cola-1.9.3.tar.gz 424299 SHA256 cdfa27bf46bcb53e566cc1eebb205ddd287b7c42b37fc8245895e6bdf2ac1497 SHA512 050d1d814d70790135ad732197e24afd8caf01f7c99cb2adbe825a99c38033ee6125bae9a6e1d59f5678a85f18f133901f59bb1c06ccf48546c2b4cecff2bf0a WHIRLPOOL 0e65cdea8c6eef91f8a919be2f72327291299777c5c5fa96efb185af3895d3736dcfe626c058b72cf368c078b074cc0b7b73c30a53af44cfbd77d367700b35aa
+DIST git-cola-1.9.4.tar.gz 434458 SHA256 c7f065bf5557ceba424ee26e5af94d01b37537ef426fffe581efe33526733525 SHA512 aabf1887da1aee2b1ae2c004c8ab29317796c4e21bda7b9937fdf3ad8aa6721e8833b56f143e4cda72bcd631ede3f176592335862e456f69729494332b33264b WHIRLPOOL 2ee639402b2bdab9bc49b11d0bf29696e3607e9218662af72fd6aeafd73da37955ce5dc40ddb03f9664fd15c3ec213681a2ab58b6451ac121a8abaafbb4bc32d
 EBUILD git-cola-1.8.2.ebuild 2198 SHA256 ad11298dfad2ed771e138db229315b7e1e9fbc5c3ef47e5fb44f6f1d741da28c SHA512 c8edde9f4c6ed8eece606ac2106a1bc61812a3aba742763e6174fba90bdac611a00c85df30602b7fe52ea4cc07f57eed9d4cd19502e21fc50a7b6a6c3a135dda WHIRLPOOL c6679a20d7c2c99d5f58fd2dd30b2803ae5bdaf0e43224ea7f14c5ae605b7179fad4b22a3f0ec43b6b847474306ab582b2b79d73d8233b7108ec3b055394aaf2
 EBUILD git-cola-1.8.3.ebuild 2201 SHA256 a5c2744d4b8c368a1fe13034e6280ff86b55d6cffb36cceec008702d9c84ffad SHA512 8a2e166e8c2069d3110955b4c7064bad72280392bcc032aaf7a3f7871537fe3d61746b9734ac23d2bd27064adbe5e9335756c9af0bbff5ab64977c1a3a99401d WHIRLPOOL 1436b87c29057066c3812932d3a23172b853e4d828a1940e2f5f7fc848bd0b178eb85ffb73d010d5c35e48f94a0aed7b80fd296abcd8ae92e0fefc8fe562abff
 EBUILD git-cola-1.8.5.ebuild 2247 SHA256 952a9e2d7a101410b75e14405503bbe84da1662f933d8b577d2d43ff49a0e63e SHA512 635d833bc4fd06d76108dd382683a0ff11b04f1fc17f18c8ef379eb47eb135c9b043df321219d14e266fec68ce9b0540e7ae0aeaaf1836bd7e87014fe362f848 WHIRLPOOL 1146720c543e29a03be3e4ed3cbe43c58f34a4f74e2778fdbfe5341409a857c159de502b903e133bbbb020775e5dea56644e2822dba8f4df3195d414ff93dbd0
 EBUILD git-cola-1.9.1.ebuild 2424 SHA256 9d6b15f099047bc093305b3bf9aee8cb8eb2cbb3655da613e5d58a9658b47480 SHA512 e2ed343d10e44dab9cd6b3ec6dd3879fc42af748e2b75ffb114f4ff33d8db76eb4460846522bd5f8fa4221ff749f809aa0704f8c2683eacc61a564814f8af3cf WHIRLPOOL 9cda07fb5540cc341de3c89cf5b76341751d83c7f42af33ec5e6afffcedc044b6ddef8e6fd6decfc82447d44f64307e1ef448abdb163637fc0333e5f0107a6be
 EBUILD git-cola-1.9.3-r1.ebuild 2467 SHA256 e11e1dbee968a095168c270ce613346f536da1b75ce443cf6d4a62eaf12ba3c3 SHA512 4112622b646ebaec8c51cbd670b34e8fc4055d9fffa4f51b1df076ceec5cc7406821fe19e1e12f8e2392420a8baa50487d05b264892e45232c5375ed14cb53c9 WHIRLPOOL 4a615f0f9483b794965daaa2151094273dae4f09fafe23d4c55104d81234e0f1f004f9ed685698a820d648b1cb8ad0ff426f0ca171c1417253aea775f92d06d2
 EBUILD git-cola-1.9.3.ebuild 2426 SHA256 88210656f2cbfd39a181e3de43bf1d0a44238c08b9a9b6f2fc61bbc594499d76 SHA512 916a82a2c7ec354589d80ef7a418efae6e702ea3c881a39edb6a8ba8f82b7d188bda295b294e5810e30792cb83e2e560ed7b91c5fc034e24f4a7484b164cdd30 WHIRLPOOL 1841250c33dd151f01e8b317dd7e59a791e88b170fd13e523237971821891a00c59c1c31d12ffccc8f5849adb8c64c22ec6beb3e8ab4cb845211def081a2b78c
-MISC ChangeLog 6552 SHA256 7939ae53cab303d593a57a0e4a476612fe1d2641fda5142fa0e495a76c1ae9b4 SHA512 0a80aba907a545f7ee1f1568f5330c0fd2f708e2157101b287cdd243bad430cd207f1880ba453d6c96daeb573097fe9f02b79abc0389a97cad9bbb72cb956c84 WHIRLPOOL 456d105878eb4915fd3ac4bd8ed7eaeb605e1b7e09b34865c479ce843e132244504a8dd5b7b7decbc4f81b373277bb7d2160891d257c796419b7ebb2ce436743
+EBUILD git-cola-1.9.4.ebuild 2471 SHA256 01d24cef423cf93b6715ff9b3ab1ed5f3a949c150354d03d746beea650ab86e8 SHA512 3b270c92fbcec1278e0f710f1f3a5e4dada2a1a3dd95871f7d12492eb34c1dcb8bdcfe87901b0dd41cca8826a100afde38d77feab4b1fefcf34a14d796eb62db WHIRLPOOL af1ae5012d17b78daf5f1ed36962e21e8b03fe8f32e6b8c2578b5ef162cc1969fec558255d8f80e93975120ed25aa5aa75e1851a64123a0c9d85d1dde8fd85a4
+MISC ChangeLog 6670 SHA256 a00e66fccfbb377b642bd2f659c2e61d84a3c7504a8c16c06cf50997b75ee26b SHA512 a5bc3cb393b6118d304c6a8817497f4a9cc6886b47aa5b8c2b2915191bc621376eaa9da02b13aa3cbd8ea88851a327f4f4ff1d971a274b4a8a3168691b602d78 WHIRLPOOL ed9b3ab23ca0916d7da1028bf6b0886720180c594b972a31a168eaef9697077591a8a107905227cf8f5a24ca1f2e473615dfeb371a92bfa8be681a2e6d8d775d
 MISC metadata.xml 339 SHA256 5d6def42fd0ce0e9d5c0aa784a1d2bad275c6efce6e3d617b92cfca27372744a SHA512 f9e797ec792d7db14d697fa4ac0ec32c0d164529b466c98069e0cd40baeeb21b84ce395e8a5974fdb454eed2dc74a4a829459a189caabc3f9203a3f9cd3ecdeb WHIRLPOOL 7cb339ffb3ab6b5f1f9105127d2d24cf59c930474f5b412a9bf26cfa7c0369d976d99774de16e4d046c5bcffb5c0664bce3741cafc39c3dd717f97865d5bdb9c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJS6OwhAAoJELnU8jG9FVirtssP/RSFL2zQ1+/EFID7JMhClqMl
-IqLCSOLgGer3k2DoUlanIhYgArc7T2NYaZfCviSFBmkW0VFLUN1+GFR7m0DFLCiN
-NWEqX5UDLbXsanMWF9Mz6fi2k8afNKDPC/Vnkrw732Xq4bC5sNRSA2K9k4Ld+oYM
-2pYD8a0L4yJlM76zubVlTE+Vef1WHGosZvwqsOeH9pDRYvupbHqCfekLrI5nanUu
-YZPSXps5jN0txcxvpYA6V9jagR/Ss/uISX5xQAVeev+NB6cgUsbal+x0eq081OGG
-3zJcRZ+O79oOY19FcOxdik0svcxf3erAa3ej4JuA3NZlcnuxTEUG4uBPTH21fkMb
-L5gLgO9A4jt0NM9gd4xPxvCOQMvfBsFzirG/inPhydNdY/nAV+B6W/tK92YXDpbG
-lS+IpLWQGAC83cvwcC9wrXLlynebPzVYRQcCsu5WEDg5QbRXyNjzwWzI85OLso12
-ImhC8o8R6slJgHYMjVwgRe26uwGOcLpohswnwbjE+s/N2JUYCG39w72fcfRjdlUF
-fkbSQjTH0kkM+2QOjCmWKUW/J16TS282fWWGEYqWFGQ0gVxORkn83jF0wA95j22p
-Uz64nrVOaHa95ARPtM/lpHkvpSPFrQZe7yBw0gJ3quQZNEUUPqhZbqTpoddZwny1
-7KU3k8+0DXzjay38Yx5W
-=ksrU
+iQIbBAEBCgAGBQJS61FJAAoJELnU8jG9FVirvzwP+JII/HvOTumY6Z2pLJ7/Sfeb
+1qDAZUof8ayzGpMRLBUkzWbSTaK492rDdX2qLS6wmbSR+V24YiwnGIl6BgB2Luk4
+lCSFbIoSFuArnR66Q5daBE8uc5jiVye1L2xUA19vTUiNtWhC0hfuOAXyyMFZdnp/
+FFJtnUKIRIB3Wt2pOO0X464+IbbUahZ1aDNy7xX2J+x2hceIxElyEQzIVV0qM+w1
+xlfaWJppZuTeBcSGvWoR1mz/3nDjRwfU4t4/dzDsDLdGa7OIQICd89UEDyfw23/T
+tDELmGCXR7rGTJ0EtoPlkpJ+AoFM2aR00K5FEAsk1VKC4a9elkP8f0CW5CDwgqsw
+GUfDBUgWdhmLFHa9gF1N6Cf2dpLN4ckniaCi+nIlwMmAKKg8f6mnULiv5h5keXx+
+PN0wneJK1D4zAhmmYNeIkMW3AtHh114qEStsp7UH8IA5AqpEjtVXxv/YE1AE0WYy
+dgeA7jkyZz+TXBj6wQbmyZbCL10FbuNCn1tfoXuomqy51+Of7KJkB09xV7wH023Z
+JOeW5hUyCEmUZMvXFRzKtmHV3nVTDhftUgfFHHmufGoZ/YSTmyv/RQSJmF/GE3jA
+bqjSzQ0sZuCGuIH2s83u/CdwR+xRTwxmEjKl7ZKCgd3Wx8j5lE3RzNKufDkGYEIv
+iffqVTgHXqBbPSzpsH8=
+=ehFk
 -----END PGP SIGNATURE-----
