@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/git-cola
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git-cola/ChangeLog,v 1.20 2014/01/29 11:55:12 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git-cola/ChangeLog,v 1.21 2014/01/31 07:31:20 jlec Exp $
+
+*git-cola-1.9.4 (31 Jan 2014)
+
+  31 Jan 2014; Justin Lecher <jlec@gentoo.org> +git-cola-1.9.4.ebuild:
+  Version Bump
 
 *git-cola-1.9.3-r1 (29 Jan 2014)
 
